fix:修复createThemeLink函数路径加载问题&默认主题如果不是default情况下刷新页面的主题样式加载问题

--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-    "name": "vue-theme-switch-webpack-plugin",
+    "name": "@bitmain/vue-theme-switch-webpack-plugin",
     "version": "1.0.0",
     "main": "lib/index.js",
+    "license": "ISC",
     "scripts": {
         "dev:example": "webpack-dev-server --config=example/build/webpack.dev.js",
         "build:example": "webpack-cli --config=example/build/webpack.build.js ",
